# notoufy

./: .clang-format  .gitignore  LICENSE
include/: notoufy.h
tests/: CMakeLists.txt  test_notoufy.cpp
